--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "node-fetch": "^3.3.2",
     "querystring": "^0.2.1",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
