--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "querystring": "^0.2.1",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "eslint": "^9.14.0",
